Adapt to Control Stack

--- a/src/planner/plan_manage/CMakeLists.txt
+++ b/src/planner/plan_manage/CMakeLists.txt
@@ -27,6 +27,9 @@ add_message_files(
   FILES
   Bspline.msg
   DataDisp.msg
+  PVAtrajectory.msg
+  PVAwaypoint.msg
+  PoseCtrlTarget.msg
   )
   
 # Generate added messages and services with any dependencies listed here
